--- a/HMGreenCityMLM/HMGreenCityMLM/Autofill/jquery-ui.css
+++ b/HMGreenCityMLM/HMGreenCityMLM/Autofill/jquery-ui.css
@@ -846,7 +846,7 @@ body .ui-tooltip {
 .ui-widget-content {
 	border: 1px solid #aaaaaa;
 	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-	color: #2c4359;
+	/*color: #2c4359;*/
 }
 .ui-widget-content a {
 	color: #2c4359;
