--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -511,7 +511,7 @@
                                                 <div class="card-body">
                                                     <div class="form-row">
                                                         <div class="col-md-2"></div>
-
+                                                
                                                         <div class="col-md-4">
                                                             <input name="txtLoginID" type="text" maxlength="10" id="txtLoginID" class="form-control" placeholder="Search By Login ID/Name" autocomplete="off">
 
@@ -741,12 +741,12 @@
 
 
 
-<style>
-    .ui-menu-item {
+@*<style>
+    #ui-id-2030 {
     border: 1px solid #d3d3d3;
     color: red !important;
 }
-</style>
+</style>*@
 <input type="hidden" id="firtsMemberID" value="@ViewBag.Fk_UserId" />
 
 <script src="../../WebsiteCss/js/jquery.js"></script>
@@ -764,25 +764,25 @@
             type: 'Post',
             success: function (response) {
                 if (response != null) {
-                   
                     $(response).each(function (index, item) {
-                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                        //debugger
                         if (item.cssStatus == "Red") {
-                            $(".ui-menu-item").css("color", "red important");
+                            $(".ui-menu-item").css("color", "red !important");
                             //alert($(".ui-menu-item").css("color", "red important"))
                             //alert(item.cssStatus)
                         }
                         else if (item.cssStatus == "Green") {
-                            $(".ui-widget.ui-widget-content").css("color", "Green");
+                            $(".ui-menu-item").css("color", "green !important");
                             //alert(item.cssStatus)
                         }
                         else if (item.cssStatus == "Black") {
-                            $(".ui-widget.ui-widget-content").css("color", "Black");
+                            $(".ui-menu-item").css("color", "black !important");
                             //alert(item.cssStatus)
                         }
                         else {
 
                         }
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
                     });
              
                     $('#txtLoginID').autocomplete({
