--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
@@ -25,15 +25,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <p style="color:red">
-                                    @TempData["BlockUnblock"]
-                                    @TempData["UpdateProfilebyadmin"]
-                                </p>
                                 <ul class="nav nav-tabs mb-3" role="tablist">
                                     <li class="nav-item">
                                         <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
                                            aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  DefaultAssociateList </span>
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Defaulter Associate List </span>
                                         </a>
                                     </li>
                                 </ul>
@@ -47,7 +43,8 @@
                                                     <div class="col-lg-4">
                                                         <div class="form-group">
                                                             <label>Login ID </label>
-                                                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                                                            @Html.TextBoxFor(m => m.ToLoginID, new { @class = "form-control" })
+                                                            @Html.HiddenFor(m => m.LoginId)
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3">
@@ -103,11 +100,50 @@
             </div>
         </div>
     </div>
-
-
 }
+<script src="../vendor/jquery/jquery.min.js"></script>
 
+<script src="../../WebsiteCss/js/jquery.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script>
 
+    $(document).ready(function () {
+        debugger;
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+        $("input").attr("autocomplete", "off");
+        var cityuse = [];
+        $("#loader").css({ 'display': '' });
+        $.ajax({
+            url: '/AdminReports/GetUserList',
+            type: 'Post',
+            success: function (response) {
+                debugger;
 
+                if (response != null) {
+                    $(response).each(function (index, item) {
+                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    });
+
+                    $('#ToLoginID').autocomplete({
+                        source: cityuse,
+                        select: function (event, ui) {
+                            var str = ui.item.label;
+                            var strsplit = str.split("(");
+                            $('#LoginId').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                        }
+                    })
+                }
+
+            }, error: function () {
+                alert('Some Thing wrong!');
+                $("#loader").css({ 'display': 'none' });
+            }
+        });
+    });
+
+    </script>
 
 
