--- a/HMGreenCityMLM/HMGreenCityMLM/Autofill/jquery-ui.css
+++ b/HMGreenCityMLM/HMGreenCityMLM/Autofill/jquery-ui.css
@@ -461,15 +461,15 @@ button.ui-button::-moz-focus-inner {
 .ui-menu .ui-menu {
 	position: absolute;
 }
-.ui-menu .ui-menu-item {
+/*.ui-menu .ui-menu-item {
 	position: relative;
 	margin: 0;
 	padding: 3px 1em 3px .4em;
 	cursor: pointer;
-	min-height: 0; /* support: IE7 */
+	min-height: 0;*/ /* support: IE7 */
 	/* support: IE10, see #8844 */
-	list-style-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");
-}
+	/*list-style-image: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7");
+}*/
 .ui-menu .ui-menu-divider {
 	margin: 5px 0;
 	height: 0;
