--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -511,7 +511,7 @@
                                                 <div class="card-body">
                                                     <div class="form-row">
                                                         <div class="col-md-2"></div>
-                                                
+
                                                         <div class="col-md-4">
                                                             <input name="txtLoginID" type="text" maxlength="10" id="txtLoginID" class="form-control" placeholder="Search By Login ID/Name" autocomplete="off">
 
@@ -741,12 +741,16 @@
 
 
 
-@*<style>
-    #ui-id-2030 {
+<style>
+    .Red{
     border: 1px solid #d3d3d3;
     color: red !important;
 }
-</style>*@
+       .Green{
+    border: 1px solid #d3d3d3;
+    color: darkgreen !important;
+}
+</style>
 <input type="hidden" id="firtsMemberID" value="@ViewBag.Fk_UserId" />
 
 <script src="../../WebsiteCss/js/jquery.js"></script>
@@ -764,35 +768,38 @@
             type: 'Post',
             success: function (response) {
                 if (response != null) {
-                    $(response).each(function (index, item) {
-                        //debugger
-                        if (item.cssStatus == "Red") {
-                            $(".ui-menu-item").css("color", "red !important");
-                            //alert($(".ui-menu-item").css("color", "red important"))
-                            //alert(item.cssStatus)
-                        }
-                        else if (item.cssStatus == "Green") {
-                            $(".ui-menu-item").css("color", "green !important");
-                            //alert(item.cssStatus)
-                        }
-                        else if (item.cssStatus == "Black") {
-                            $(".ui-menu-item").css("color", "black !important");
-                            //alert(item.cssStatus)
-                        }
-                        else {
-
-                        }
-                        cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
+                    $(response).each(function (index, item1) {
+                        cityuse.push(item1.UserName + "(" + item1.LoginIDD + ")");
+                        $('#txtLoginID').autocomplete({
+                            source: cityuse,
+                            select: function (event, ui) {
+                                //console.log(item.cssStatus)
+                                var str = ui.item.label;
+                                var strsplit = str.split("(");
+                                $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                             
+                            },
+                            minLength: 1
+                        }).data("ui-autocomplete")._renderItem = function (ul, item) {
+                            console.log(ul)
+                                var div = $("<li>")
+                                    .append("<li class='" + item1.cssStatus + "' id='ui-id-6' tabindex='-1'>(" + item.label + ")</li>")
+                                    .appendTo(ul);
+                                return div;
+                             
+                        };
                     });
              
-                    $('#txtLoginID').autocomplete({
-                        source: cityuse,
-                        select: function (event, ui) {
-                            var str = ui.item.label;
-                            var strsplit = str.split("(");
-                            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
-                        }
-                    })
+                //    $('#txtLoginID').autocomplete({
+                //        source: cityuse,
+                //        select: function (event, ui) {
+                //            var str = ui.item.label;
+                //            var strsplit = str.split("(");
+                //            $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
+                //        }
+                //    })
+                    //}
+                   
                 }
             }, error: function () {
                 alert('Some Thing wrong!');
