--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/DefaultAssociateList.cshtml
@@ -11,7 +11,6 @@
 
 @using (Html.BeginForm("DefaultAssociateList", "AdminReports", FormMethod.Post, new { @id = "form1"}))
 {
-
     <br />
     <div class="app-content content">
         <div class="content-overlay"></div>
@@ -25,15 +24,11 @@
                     <div class="card">
                         <div class="card-content">
                             <div class="card-body">
-                                <p style="color:red">
-                                    @TempData["BlockUnblock"]
-                                    @TempData["UpdateProfilebyadmin"]
-                                </p>
                                 <ul class="nav nav-tabs mb-3" role="tablist">
                                     <li class="nav-item">
                                         <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
                                            aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  DefaultAssociateList </span>
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Defaulter Associate List </span>
                                         </a>
                                     </li>
                                 </ul>
@@ -59,7 +54,6 @@
                                                 </div>
                                                 <div class="dt-responsive table-responsive associatman">
                                                     <table class="table mb-0" id="example23">
-
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
@@ -86,7 +80,6 @@
                                                                         </tr>
                                                                         i++;
                                                                     }
-
                                                                 }
                                                             }
                                                         </tbody>
