--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -769,8 +769,8 @@
             success: function (response) {
                 if (response != null) {
                     $(response).each(function (index, item1) {
-                        cityuse.push
-                        //cityuse.push(item1.UserName + "(" + item1.LoginIDD + ")");
+                        //cityuse.push
+                        cityuse.push(item1.UserName + "(" + item1.LoginIDD + ")");
                         //cityuse.addClass('Rajan');
                         //console.log(cityuse.push(item1.UserName + "(" + item1.LoginIDD + ")"))
                         //alert(cityuse)
