--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/TransactionLog.cshtml
@@ -69,6 +69,7 @@
                                                                 <th>Sr No.</th>
                                                                 <th>Transaction Date</th>
                                                                 <th>Action</th>
+                                                                <th>Done By</th>
                                                                 <th>Remark</th>
 
 
@@ -86,6 +87,7 @@
                                                                             <td>@i</td>
                                                                             <td>@Item.AddedOn</td>
                                                                             <td>@Item.Action</td>
+                                                                            <td>@Item.Name</td>
                                                                             <td>@Item.Remarks</td>
 
 
