--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -346,7 +346,21 @@
         display: block;
         margin: 0 auto;
     }
+   i.girl-hold {
+        width: 50px !important;
+        height: 50px !important;
+        background-image: url(../../images/TreeIcon/girl-hold.png) !important;
+        display: block;
+        margin: 0 auto;
+    }
 
+    i.men-hold {
+        width: 50px !important;
+        height: 50px !important;
+        background-image: url(../../images/TreeIcon/men-hold.png) !important;
+        display: block;
+        margin: 0 auto;
+    }
     #lblDisplayName {
         font-size: 18px;
         padding: 5px 5px 10px;
@@ -1095,6 +1109,14 @@
                             cssclass = "girl-inactive";
                         }
                     }
+                    else if (cssclaa == "hold-member") {
+                        if (Gender == "M") {
+                            cssclass = "men-hold";
+                        }
+                        else {
+                            cssclass = "girl-hold";
+                        }
+                    }
                     else {
                         cssclass = "join-member";
                     }
@@ -1207,6 +1229,14 @@
                                                     cssclass = "girl-inactive";
                                                 }
                                             }
+                                            else if (cssclaa == "hold-member") {
+                                                if (Gender == "M") {
+                                                    cssclass = "men-hold";
+                                                }
+                                                else {
+                                                    cssclass = "girl-hold";
+                                                }
+                                            }
                                             else {
                                                 cssclass = "join-member";
                                             }
@@ -1313,6 +1343,14 @@
                                                                         }
                                                                         else {
                                                                             cssclass = "girl-inactive";
+                                                                        }
+                                                                    }
+                                                                    else if (cssclaa == "hold-member") {
+                                                                        if (Gender == "M") {
+                                                                            cssclass = "men-hold";
+                                                                        }
+                                                                        else {
+                                                                            cssclass = "girl-hold";
                                                                         }
                                                                     }
                                                                     else {
@@ -1462,6 +1500,15 @@
                     }
                     else {
                         status = "girl-active"
+                    }
+                }
+                else if (status == "Y") {
+
+                    if (gender == "M") {
+                        status = "men-hold"
+                    }
+                    else {
+                        status = "girl-hold"
                     }
                 }
                 else {
