--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -217,7 +217,7 @@
         }
     </style>
 </head>
-<body class="menu-expanded pace-done dark-layout">
+<body class="menu-expanded pace-done semi-dark-layout">
     <nav class="header-navbar navbar-expand-lg navbar navbar-with-menu floating-nav navbar-light navbar-shadow">
         <div class="navbar-wrapper">
             <div class="navbar-container content">
