--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -204,7 +204,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="panel-body table-responsive">
-                                <table class="table table-striped table-bordered table-hover" id="tblData" style="color:white">
+                                <table class="table table-striped table-bordered table-hover" id="tblData">
                                     <thead>
                                         <tr>
                                             <th>Payout No</th>
