--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Home/Login.cshtml
@@ -167,7 +167,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="newyear">
-                                <img style="width:100%" src="../WebsiteCss/KohinoorCityOffer.jpeg" class="img-responsive" />
+                                <img style="width:100%" src="../WebsiteCss/4.jpg" class="img-responsive" />
                             </div>
                         </div>
                     </div>
