--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -8,7 +8,8 @@
 <link href="../../css/tree.css" rel="stylesheet" />
 <style type="text/css">
     .ui-autocomplete-loading {
-        background: white url("../img/player_loading.gif") right center no-repeat;
+        /*background: white url("../img/player_loading.gif") right center no-repeat;*/
+        background: url("../img/player_loading.gif") right center no-repeat;
         background-size: 20px;
     }
 
@@ -448,9 +449,14 @@
     .main-menu {
         z-index: 1 !important;
     }
-    .custom{
-        color:red;
+
+    .custom {
+        color: red;
     }
+
+   
+
+   
 </style>
 <style>
     #divload {
@@ -493,6 +499,11 @@
                 <div class="card">
                     <div class="card-content">
                         <div class="card-body">
+                            <ul>
+                                <li id="li1">
+                                    yytytu
+                                </li>
+                            </ul>
                             <ul class="nav nav-tabs mb-3" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
@@ -511,7 +522,7 @@
                                                 <div class="card-body">
                                                     <div class="form-row">
                                                         <div class="col-md-2"></div>
-                                                
+
                                                         <div class="col-md-4">
                                                             <input name="txtLoginID" type="text" maxlength="10" id="txtLoginID" class="form-control" placeholder="Search By Login ID/Name" autocomplete="off">
 
@@ -742,11 +753,12 @@
 
 
 @*<style>
-    #ui-id-2030 {
-    border: 1px solid #d3d3d3;
-    color: red !important;
-}
-</style>*@
+        #ui-id-2030 {
+        border: 1px solid #d3d3d3;
+        color: red !important;
+    }
+    </style>*@
+
 <input type="hidden" id="firtsMemberID" value="@ViewBag.Fk_UserId" />
 
 <script src="../../WebsiteCss/js/jquery.js"></script>
@@ -754,29 +766,32 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
-       
+        debugger;
+        
         $("input").attr("autocomplete", "off");
-        var elements = document.getElementsByClassName('ui-widget.ui-widget-content');
+
         var cityuse = [];
         $("#loader").css({ 'display': '' });
         $.ajax({
             url: '/AdminReports/GetUserList',
             type: 'Post',
             success: function (response) {
+                debugger;
                 if (response != null) {
                     $(response).each(function (index, item) {
-                        //debugger
                         if (item.cssStatus == "Red") {
-                            $(".ui-menu-item").css("color", "red !important");
+                            debugger;
+                            $("body .ui-autocomplete .ui-menu-item").attr('style', "color: green");
                             //alert($(".ui-menu-item").css("color", "red important"))
-                            //alert(item.cssStatus)
+                            // alert(item.cssStatus)
                         }
                         else if (item.cssStatus == "Green") {
-                            $(".ui-menu-item").css("color", "green !important");
+                            $("body .ui-autocomplete .ui-menu-item").removeAttr("style");
+                            //  $("#ui-id-4").css("color", "green !important");
                             //alert(item.cssStatus)
                         }
                         else if (item.cssStatus == "Black") {
-                            $(".ui-menu-item").css("color", "black !important");
+                            //  $(".ui-menu-item").css("color", "black !important");
                             //alert(item.cssStatus)
                         }
                         else {
@@ -784,10 +799,12 @@
                         }
                         cityuse.push(item.UserName + "(" + item.LoginIDD + ")");
                     });
-             
+
                     $('#txtLoginID').autocomplete({
+
                         source: cityuse,
                         select: function (event, ui) {
+                            debugger;
                             var str = ui.item.label;
                             var strsplit = str.split("(");
                             $('#ToLoginID').val(strsplit[1].substr(0, strsplit[1].length - 1));
@@ -875,7 +892,7 @@
 
         if (winWidth < 998) {
             $("#member-details").addClass('active');
-            $("#go-top").find('input[type="hidden"]').val(item1);
+            $("#go-top").find('input[type="hidden"]').val(item1); s
         }
         $("#loading-image").hide();
         $('#' + obj.id).attr("data-content", $("#member-details").html());
