Get Business Status Changes

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/GetBusinessStatus.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/GetBusinessStatus.cshtml
@@ -24,7 +24,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
                                            aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Topup Reports </span>
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Update Business Status </span>
                                         </a>
                                     </li>
 
@@ -121,7 +121,7 @@
 
                                                                             <td>
                                                                                 @*<a href="/AdminReports/PrintReciept/@Item.LoginId">Print</a>*@
-                                                                                <a href="javascript:void(0)" class="btn btn-sm btn-primary Update" target="_blank">Update</a>
+                                                                                <a href="javascript:void(0)" class="btn btn-sm btn-primary Update">Update</a>
                                                                                 <input type="hidden" class="PK_InvestmentId" value="@Item.ToLoginID" />
                                                                                 @*<a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class="btn btn-sm btn-primary" target="_blank">New Business</a>
                                                                                     <a href="/AdminReports/PrintTopUp?ToLoginID=@Item.ToLoginID" class="btn btn-sm btn-primary" target="_blank">Other Business</a>*@
