--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -39,10 +39,10 @@
                                             <div class="col-md-6">
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Topup Type <span style="color: red">*</span></label>
-                                                    @*<div class="col-sm-9">
-                                                            <input type="radio" id="rdbtype" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
-                                                            <input type="radio" id="rdbtype" name="rdbtype" onclick="return showdetails('Product')" /> Product
-                                                        </div>*@
+                                                    <div class="col-sm-9" style="display:none">
+                                                            <input type="radio" id="rdb_type" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
+                                                            <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
+                                                        </div>
                                                     <div class="col-sm-9">
                                                         <input type="radio"  name="rdbtype" onclick="return showdetails('NewBusiness')" value="NewBusiness"/> New Business
                                                         <input type="radio"  name="rdbtype" onclick="return showdetails('OtherBusiness')"  value="OtherBusiness"/> Other Business
