--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -314,7 +314,21 @@
         display: block;
         margin: 0 auto;
     }
+       i.girl-hold {
+        width: 50px !important;
+        height: 50px !important;
+        background-image: url(../../images/TreeIcon/girl-hold.png) !important;
+        display: block;
+        margin: 0 auto;
+    }
 
+    i.men-hold {
+        width: 50px !important;
+        height: 50px !important;
+        background-image: url(../../images/TreeIcon/men-hold.png) !important;
+        display: block;
+        margin: 0 auto;
+    }
     i.join-member {
         width: 50px;
         height: 50px;
@@ -1108,6 +1122,14 @@
                             cssclass = "girl-inactive";
                         }
                     }
+                    else if (cssclaa == "hold-member") {
+                        if (Gender == "M") {
+                            cssclass = "men-hold";
+                        }
+                        else {
+                            cssclass = "girl-hold";
+                        }
+                    }
                     else {
                         cssclass = "join-member";
                     }
@@ -1222,6 +1244,14 @@
                                                     cssclass = "girl-inactive";
                                                 }
                                             }
+                                            else if (cssclaa == "hold-member") {
+                                                if (Gender == "M") {
+                                                    cssclass = "men-hold";
+                                                }
+                                                else {
+                                                    cssclass = "girl-hold";
+                                                }
+                                            }
                                             else {
                                                 cssclass = "join-member";
                                             }
@@ -1330,6 +1360,14 @@
                                                                         }
                                                                         else {
                                                                             cssclass = "girl-inactive";
+                                                                        }
+                                                                    }
+                                                                    else if (cssclaa == "hold-member") {
+                                                                        if (Gender == "M") {
+                                                                            cssclass = "men-hold";
+                                                                        }
+                                                                        else {
+                                                                            cssclass = "girl-hold";
                                                                         }
                                                                     }
                                                                     else {
@@ -1480,6 +1518,15 @@
                     }
                     else {
                         status = "girl-active"
+                    }
+                }
+                else if (status == "Y") {
+
+                    if (gender == "M") {
+                        status = "men-hold"
+                    }
+                    else {
+                        status = "girl-hold"
                     }
                 }
                 else {
