--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -28,7 +28,7 @@
 
                                 </div>
                                 <h2 class="text-bold-700 mt-1 mb-25">@ViewBag.TotalUsers</h2>
-                                <a class="mb-0" style="color:#fff" href="/AdminProfile/AssociateList">Total Associates</a>
+                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList">Total Associates</a>
                                 <br />
                             </div>
 
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                                 <h2 class="text-bold-700 mt-1 mb-25">@ViewBag.ActiveUsers</h2>
-                                <a class="mb-0" style="color:#fff" href="/AdminProfile/AssociateList?Status=P">Active Users</a>
+                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=P">Active Users</a>
                                 <br />
                             </div>
 
@@ -59,7 +59,7 @@
                                     </div>
                                 </div>
                                 <h2 class="text-bold-700 mt-1 mb-25">@ViewBag.InactiveUsers</h2>
-                                <a class="mb-0" style="color:#fff" href="/AdminProfile/AssociateList?Status=T">InActive Users</a>
+                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=T">InActive Users</a>
 
                                 <br />
                             </div>
@@ -75,7 +75,7 @@
                                     </div>
                                 </div>
                                 <h2 class="text-bold-700 mt-1 mb-25">@ViewBag.BlockedUsers</h2>
-                                <a class="mb-0" style="color:#fff" href="/AdminProfile/AssociateList?Status=B">Blocked Users</a>
+                                <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList?Status=B">Blocked Users</a>
                                 <br />
                             </div>
 
