--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/BinaryTree.cshtml
@@ -286,10 +286,14 @@
     i.men-active {
         width: 50px;
         height: 50px;
-        background-image: url(../../images/TreeIcon/men-active.png) !important;
+         background-image: url(../../images/TreeIcon/men-active.png) !important;
+        /*background-image: url(~~/images/TreeIcon/men-active.png) !important;*/
         display: block;
         margin: 0 auto;
     }
+
+
+
 
     i.men-inactive {
         width: 50px;
