--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -107,9 +107,9 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="form-group row">
-                                                    <label class="col-sm-2 col-form-label">In Words<span style="color: white">*</span></label>
+                                                    <label class="col-sm-2 col-form-label">In Words<span style="color: black">*</span></label>
                                                     <div class="col-sm-10">
-                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @style = "font-weight:800;color:white;", @placeholder = "Amount in words", @disabled = "true" })
+                                                        @Html.TextBoxFor(m => m.word, new { @class = "form-control", @style = "font-weight:800;color:#282323;", @placeholder = "Amount in words", @disabled = "true" })
 
 
                                                     </div>
